salesforce-port/force-app/main/default/objects/Expense_Rule__c/Expense_Rule__c.object-meta.xml
<CustomObject>
    <label>Expense Rule</label>
    <nameField>
        <displayFormat>ER-{0000}</displayFormat>
        <label>Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>