salesforce-port/force-app/main/default/objects/Expense_Rule__c/fields/Apply_Category__c.field-meta.xml
<CustomField>
    <fullName>Apply_Category__c</fullName>
    <label>Apply Category</label>
    <type>Lookup</type>
    <referenceTo>Expense_Category__c</referenceTo>
    <relationshipLabel>Expense Rules</relationshipLabel>
    <relationshipName>Expense_Rules</relationshipName>
</CustomField>