salesforce-port/force-app/main/default/objects/Expense_Rule__c/fields/Apply_Tag__c.field-meta.xml
<CustomField>
    <fullName>Apply_Tag__c</fullName>
    <label>Apply Tag</label>
    <type>Lookup</type>
    <referenceTo>Expense_Tag__c</referenceTo>
    <relationshipLabel>Expense Rules</relationshipLabel>
    <relationshipName>Expense_Rules</relationshipName>
</CustomField>