salesforce-port/force-app/main/default/objects/Expense_Rule__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Lookup</type>
    <referenceTo>Expense_Category__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
</CustomField>