salesforce-port/force-app/main/default/objects/Expense_Rule__c/fields/Match_Type__c.field-meta.xml
<CustomField>
    <fullName>Match_Type__c</fullName>
    <label>Match Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Contains</fullName><default>true</default><label>Contains</label></value>
            <value><fullName>Equals</fullName><default>false</default><label>Equals</label></value>
            <value><fullName>StartsWith</fullName><default>false</default><label>Starts With</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>