salesforce-port/force-app/main/default/objects/Expense_Rule__c/fields/Merchant_Match__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Match__c</fullName>
    <label>Merchant Match</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>