salesforce-port/force-app/main/default/objects/Expense_Rule__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <type>Lookup</type>
    <referenceTo>Expense_Policy__c</referenceTo>
    <relationshipLabel>Expense Rules</relationshipLabel>
    <relationshipName>Expense_Rules</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>